# Privacer

./: .gitignore  AGENTS.md  README.md
.opencode/plugins/: privacer.js
core/: Cargo.toml
core/examples/: test_patterns.rs
core/src/: config.rs  detector.rs  entropy.rs  lib.rs  patterns.rs  preprocess.rs  whitelist.rs
privacer-adapter/: package-lock.json  package.json  tsconfig.json
privacer-adapter/src/: index.ts  logger.ts  wasm-loader.ts
scripts/: install.ps1  install.sh  privacer-plugin.js  setup-opencode-plugin.sh
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/wasm/: package.json  privacer_wasm.d.ts  privacer_wasm.js  privacer_wasm_bg.js  privacer_wasm_bg.wasm  privacer_wasm_bg.wasm.d.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
