[package]
name = "privacer-core"
version = "0.1.0"
edition = "2024"
description = "Privacy Guard core — detect and redact sensitive data in LLM requests"

[dependencies]
regex = "1"
fancy-regex = "0.14"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
unicode-normalization = "0.1"
once_cell = "1"
log = "0.4"
